# everest

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
everest/: app.py  auth.py  cli.py  config.py  logging.py  main.py  middleware.py
everest/controllers/: __init__.py  home.py  item_detail.py  item_edit.py  layout.py  table_item.py  table_list.py
everest/controllers/app/: home.py  item_create.py  item_detail.py  item_edit.py  layout.py  table_list.py
everest/controllers/auth/: layout.py  login.py  logout.py
everest/core/: exceptions.py  jwt.py  layout.py  tables.py  types.py  utils.py
everest/core/auth/: config.py  dependencies.py  exceptions.py
everest/core/builder/: __init__.py  __main__.py  classbuilder.py  sqltable.py  utils.py
everest/models/: __init__.py  auth.py  detail.py  mixins.py  tasks.py  visits.py
everest/models/managed/admin/: TableView.py  TableViewColumn.py  __init__.py
everest/models/managed/demo/: Book.py
everest/views/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
everest/views/app/: layout.tsx
everest/views/app/home/: page.tsx
everest/views/app/table/create/: page.tsx
everest/views/app/table/edit/: page.tsx
everest/views/app/table/item/: page.tsx
everest/views/auth/: layout.tsx
everest/views/auth/login/: page.tsx
everest/views/auth/logout/: page.tsx
everest/views/components/: EditTableView.tsx  FloatingRow.tsx  TableNavigationSidebar.tsx  utils.ts
everest/views/components/FormFields/: common.tsx
everest/views/components/Layout/: index.tsx  sidebar.tsx
(+2 files in other folders)
